# Nepali-News-Scrapper

./: .gitignore  .t  README.md  pyproject.toml  requirements.txt  setup.py  sites.json  sites.txt
.github/workflows/: main.yml
newspaper_wrapper/: version.py
tests/: unit_tests.py
