[tool.poetry]
name = "newspaper3k_wrapper"
version = "0.1.0"
description = "Wrapper over newspaper3k library to provide support to nepali sites"
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]
packages = [
    { include = "newspaper_wrapper" }
]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.9.0"
cssselect = "^1.1.0"
feedfinder2 = "^0.0.4"
feedparser = "^5.2.1"
jieba3k = "^0.35.1"
lxml = "^4.5.0"
nltk = "^3.5"
Pillow = "^7.1.2"
pythainlp = "^2.1.4"
python-dateutil = "^2.8.1"
PyYAML = "^5.3.1"
requests = "^2.23.0"
tinysegmenter = "^0.4"
tldextract = "^2.2.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ptpython = "^3.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
